--- a/style.css
+++ b/style.css
@@ -8,28 +8,32 @@ body[data-theme = "light"] {
     --background-color: rgb(0,0,0);
     --navbar-color: rgb(0,0,0);
     --navbar-text-color: #fff;
+    --text-color: #000;
 }
 
 body[data-theme = "dark"] {
     --background-color: #191919;
     --navbar-color: #1a1a1a;
     --navbar-text-color: #fff;
+    --text-color: #fff;
 }
 
 body {
     margin: auto;
     display: block;
     width: 100%;
-    /* max-width: 1500px; */
     font-family: sans-serif;
     background: var(--background-color);
     user-select: none;
 }
 
+
+
+/* NAVBAR */
 .navbar{
     width:100%;
     position: fixed;
-    
+    z-index: 3;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -41,7 +45,7 @@ body {
     display: flex;
 }
 
-.link a {
+.link a{
     color: var(--navbar-text-color);
     opacity: 0.5;
     text-decoration: none;
@@ -54,5 +58,133 @@ body {
 }
 
 .link.active, .link a:hover{
+    opacity: 1;
+}
+
+
+/* HOME SECTION */
+.home-section{
+    width:100%;
+    height: 100vh;
+    padding: 0 150px;
+    display: flex;
+    align-items: center;
+    position: relative;
+    opacity: 0;
+    transition: 1s;
+}
+
+.hero-heading {
+    color: var(--text-color);
+    font-size: 120px;
+    text-transform: capitalize;
+    font-weight: 300;
+}
+
+.home-image {
+    top: 0;
+    right: 0;
+    position: absolute;
+    height: inherit;
+    width: 50%;
+    object-fit: cover;
+    opacity: 0.2;
+}
+
+
+/* GAMES SECTION */
+
+.games-section {
+    width: 100%;
+    padding: 150px 100px 100px;
+    position: static;
+    transition: 1s;
+    opacity: 1;
+}
+
+.games-heading{
+    font-size: 100px;
+    background: #252525;
+    text-transform: capitalize;
+    text-align: center;
+    margin-bottom: 50px;
+    color: #fff;
+    font-family: inherit;
+}
+
+.games-container{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    grid-gap: 100px;
+}
+
+.games-card {
+    height: 400px;
+    position: relative;
+}
+
+.games-img {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    object-fit: cover;
+    transition: 1s;
+}
+
+.games-content {
+    position: relative;
+    padding: 40px;
+    color: #fff;
+    transition: .5s;
+    opacity: 0;
+    z-index: 8;
+}
+
+.game-title {
+    font-size: 50px;
+    text-transform: capitalize;
+    text-align: center;
+    font-weight: 300;
+    z-index: 0;
+}
+
+.game-info {
+    font-size: 20px;
+    margin: 40px;
+    line-height: 30px;
+    text-align: center;
+    color: #fff;
+    z-index: 3;
+}
+
+.games-btn.grp {
+    display: flex;
+    justify-content: center;
+}
+
+.play-btn {
+    height: 40px;
+    text-transform: uppercase;
+    font-size: 20px;
+    border: none;
+    background: rgb(80, 145, 27);
+    color: #fff;
+    cursor: pointer;
+}
+
+.play-btn:active {
+    background: none;
+    border: 2px solid #fff;
+}
+
+.games-card:hover .games-img{
+    filter: blur(20px);
+}
+
+.games-card:hover .games-content {
+    opacity: 1;
+}
+
+.active {
     opacity: 1;
 }
