--- a/style.css
+++ b/style.css
@@ -4,11 +4,20 @@
     box-sizing: border-box;
 }
 
+
+html {
+    scroll-behavior: smooth;
+}
+
+
 body[data-theme = "light"] {
-    --background-color: rgb(0,0,0);
+    --background-color: #fcfcfc;
     --navbar-color: rgb(0,0,0);
-    --navbar-text-color: #fff;
-    --text-color: #000;
+    --navbar-text-color: #000;
+    --text-color: #1a1a1a;
+    --alt-text-color: #4756df;
+    --primary-shadow: #8b8eaf;
+
 }
 
 body[data-theme = "dark"] {
@@ -16,13 +25,15 @@ body[data-theme = "dark"] {
     --navbar-color: #1a1a1a;
     --navbar-text-color: #fff;
     --text-color: #fff;
+    --alt-text-color: #fff;
+    --primary-shadow: #8b8eaf;
 }
 
 body {
     margin: auto;
     display: block;
-    width: 100%;
-    font-family: sans-serif;
+    /* width: 100%; */
+    font-family: 'Roboto', sans-serif;
     background: var(--background-color);
     user-select: none;
 }
@@ -31,14 +42,22 @@ body {
 
 /* NAVBAR */
 .navbar{
-    width:100%;
-    position: fixed;
-    z-index: 3;
+    /* width:100%; */
+    position: sticky;
+    top:0;
+    left:0;
+    z-index: 1;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
-    background: var(--navbar-color);
-    opacity: 80%;
+    background: var(--background-color);
+    padding: 1.5rem 3.5rem;
+    opacity: 100%;
+    box-shadow: 0 3px 5px rgba(0, 0, 0, 0.1);;
+}
+
+.nav-logo {
+    color: #4756df;
 }
 
 .link-group {
@@ -48,7 +67,7 @@ body {
 
 .link a{
     color: var(--navbar-text-color);
-    opacity: 0.5;
+    opacity: 80%;
     text-decoration: none;
     text-transform: capitalize;
     padding: 10px 30px;
@@ -65,7 +84,8 @@ body {
 
 /* HOME SECTION */
 .home-section{
-    width:100%;
+    margin: auto;
+    width:80%;
     height: 100vh;
     padding: 0 150px;
     display: flex;
@@ -73,12 +93,13 @@ body {
     position: relative;
     opacity: 0;
     transition: 1s;
+    margin-bottom: 50px;
 }
 
 .hero-heading {
     color: var(--text-color);
-    font-size: 120px;
-    font-weight: 300;
+    font-size: 80px;
+    margin: auto;
 }
 
 .home-image {
@@ -94,7 +115,51 @@ body {
 
 /* ABOUT SECTION */
 
+.about-section {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 
+.about-cards {
+    width: 60%;
+    display:flex;
+    flex-wrap: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    box-shadow: 0px 2px 15px 2px var(--primary-shadow);
+}
+
+
+.about-heading {
+    font-size: 60px;
+    font-weight: 600;
+    font-family: inherit;
+    text-transform: capitalize;
+    text-align: center;
+    color: var(--text-color);
+    margin-bottom: 50px;
+}
+
+.about-card {
+    /* width: 60%; */
+    padding: 0px 30px 0px 0px;
+    margin: auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    gap: 5%;
+    /* box-shadow: 0px 2px 15px 2px var(--primary-shadow); */
+}
+
+.info-container {
+    display: flex;
+    flex-wrap: wrap;
+
+}
 
 
 
@@ -104,6 +169,7 @@ body {
 
 .games-section {
     width: 100%;
+    margin: auto;
     padding: 150px 20px 100px;
     position: static;
     transition: 1s;
@@ -111,13 +177,14 @@ body {
 }
 
 .games-heading{
-    font-size: 100px;
-    background: #252525;
+    font-size: 72px;
+    /* background: #252525; */
     text-transform: capitalize;
     text-align: center;
     margin-bottom: 50px;
-    color: #fff;
+    color: var(--text-color);
     font-family: inherit;
+    font-weight: 600;
 }
 
 .games-container{
