--- a/style.css
+++ b/style.css
@@ -193,6 +193,7 @@ body {
     justify-content: center;
     gap: 5%;
     margin: -10px 0 0 0;
+    box-shadow: 0px 2px 15px 2px var(--primary-shadow);
 }
 
 
