--- a/style.css
+++ b/style.css
@@ -97,11 +97,11 @@ body {
 /* HOME SECTION */
 .home-section{
     margin: auto;
-    width:80%;
+    /* width:80%; */
     height: 100vh;
-    padding: 0 150px;
-    display: flex;
-    align-items: center;
+    /* padding: 0 150px; */
+    /* display: flex;
+    align-items: center; */
     position: relative;
     opacity: 0;
     transition: 1s;
@@ -110,18 +110,21 @@ body {
 
 .hero-heading {
     color: var(--text-color);
-    font-size: 80px;
-    margin: auto;
+    font-size: 56px;
+    position: absolute;
+    margin: 10%;
+    z-index: 1;
 }
 
 .home-image {
     top: 0;
-    right: 0;
-    position: absolute;
-    height: inherit;
-    width: 50%;
+    position: relative;
+    /* height: inherit; */
+    object-fit: fill;
+    width: 100%;
+    height: 80%;
     object-fit: cover;
-    opacity: 0.2;
+    /* opacity: 0.2; */
 }
 
 
