--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ body {
     position: sticky;
     top:0;
     left:0;
-    z-index: 1;
+    z-index: 3;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -103,7 +103,7 @@ body {
     /* display: flex;
     align-items: center; */
     position: relative;
-    opacity: 0;
+    opacity: 1;
     transition: 1s;
     margin-bottom: 50px;
 }
@@ -112,8 +112,10 @@ body {
     color: var(--text-color);
     font-size: 56px;
     position: absolute;
-    margin: 10%;
-    z-index: 1;
+    top: 30%;
+    left: 50%;
+    transform: translate(-50%, -30%);;
+    z-index: 2;
 }
 
 .home-image {
